[gd_scene load_steps=20 format=2]

[ext_resource path="res://styles/ListItem.tres" type="Theme" id=1]
[ext_resource path="res://styles/InstallButton.tres" type="Theme" id=2]
[ext_resource path="res://styles/DownloadingButton.tres" type="Theme" id=3]
[ext_resource path="res://src/versions/VersionListItem.gd" type="Script" id=4]
[ext_resource path="res://src/dialogs/BaseDialog.gd" type="Script" id=5]

[sub_resource type="VisualShaderNodeCompare" id=1]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 0, 0, 0 ), 2, 1e-05 ]
type = 1

[sub_resource type="VisualShaderNodeColorConstant" id=2]
constant = Color( 0, 1, 0, 1 )

[sub_resource type="VisualShaderNodeInput" id=3]
input_name = "color"

[sub_resource type="VisualShaderNodeCompare" id=4]
function = 4

[sub_resource type="VisualShaderNodeSwitch" id=5]

[sub_resource type="VisualShaderNodeSwitch" id=6]

[sub_resource type="VisualShaderNodeScalarUniform" id=7]
uniform_name = "Progress"

[sub_resource type="VisualShaderNodeInput" id=8]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorDecompose" id=9]

[sub_resource type="VisualShaderNodeColorConstant" id=10]
constant = Color( 0.396078, 0.462745, 0.560784, 1 )

[sub_resource type="VisualShaderNodeColorConstant" id=11]
constant = Color( 0.298039, 0.341176, 0.443137, 1 )

[sub_resource type="VisualShader" id=12]
code = "shader_type canvas_item;
uniform float Progress;



void vertex() {
// Output:0

}

void fragment() {
// Input:14
	vec3 n_out14p0 = COLOR.rgb;

// Color:12
	vec3 n_out12p0 = vec3(0.000000, 1.000000, 0.000000);
	float n_out12p1 = 1.000000;

// Compare:10
	bool n_out10p0;
	{
		bvec3 _bv = equal(n_out14p0, n_out12p0);
		n_out10p0 = all(_bv);
	}

// Input:4
	vec3 n_out4p0 = vec3(UV, 0.0);

// VectorDecompose:5
	float n_out5p0 = n_out4p0.x;
	float n_out5p1 = n_out4p0.y;
	float n_out5p2 = n_out4p0.z;

// ScalarUniform:2
	float n_out2p0 = Progress;

// Compare:15
	bool n_out15p0 = n_out5p0<n_out2p0;

// Color:8
	vec3 n_out8p0 = vec3(0.298039, 0.341176, 0.443137);
	float n_out8p1 = 1.000000;

// Color:7
	vec3 n_out7p0 = vec3(0.396078, 0.462745, 0.560784);
	float n_out7p1 = 1.000000;

// VectorSwitch:16
	vec3 n_out16p0;
	if(n_out15p0)
	{
		n_out16p0 = n_out8p0;
	}
	else
	{
		n_out16p0 = n_out7p0;
	}

// VectorSwitch:17
	vec3 n_out17p0;
	if(n_out10p0)
	{
		n_out17p0 = n_out16p0;
	}
	else
	{
		n_out17p0 = n_out14p0;
	}

// Output:0
	COLOR.rgb = n_out17p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -1137, 290 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 7 )
nodes/fragment/2/position = Vector2( -600, 300 )
nodes/fragment/4/node = SubResource( 8 )
nodes/fragment/4/position = Vector2( -840, 120 )
nodes/fragment/5/node = SubResource( 9 )
nodes/fragment/5/position = Vector2( -660, 160 )
nodes/fragment/7/node = SubResource( 10 )
nodes/fragment/7/position = Vector2( -260, 460 )
nodes/fragment/8/node = SubResource( 11 )
nodes/fragment/8/position = Vector2( -440, 400 )
nodes/fragment/10/node = SubResource( 1 )
nodes/fragment/10/position = Vector2( -120, -40 )
nodes/fragment/12/node = SubResource( 2 )
nodes/fragment/12/position = Vector2( -500, 20 )
nodes/fragment/14/node = SubResource( 3 )
nodes/fragment/14/position = Vector2( -420, -60 )
nodes/fragment/15/node = SubResource( 4 )
nodes/fragment/15/position = Vector2( -280, 200 )
nodes/fragment/16/node = SubResource( 5 )
nodes/fragment/16/position = Vector2( -60, 180 )
nodes/fragment/17/node = SubResource( 6 )
nodes/fragment/17/position = Vector2( 180, 100 )
nodes/fragment/connections = PoolIntArray( 4, 0, 5, 0, 12, 0, 10, 1, 14, 0, 10, 0, 2, 0, 15, 1, 15, 0, 16, 0, 8, 0, 16, 1, 7, 0, 16, 2, 10, 0, 17, 0, 14, 0, 17, 2, 17, 0, 0, 0, 16, 0, 17, 1, 5, 0, 15, 0 )

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = SubResource( 12 )
shader_param/Progress = 0.5

[sub_resource type="StyleBoxEmpty" id=14]

[node name="VersionListItem" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0
custom_constants/separation = 10

[node name="VBox" type="VBoxContainer" parent="HBox"]
margin_top = 279.0
margin_right = 879.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Name" type="Label" parent="HBox/VBox"]
margin_right = 879.0
margin_bottom = 14.0

[node name="Path" type="Label" parent="HBox/VBox"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 18.0
margin_right = 879.0
margin_bottom = 32.0
mouse_filter = 0
clip_text = true

[node name="DownloadProgress" type="PanelContainer" parent="HBox"]
visible = false
material = SubResource( 13 )
margin_left = 679.0
margin_top = 283.0
margin_right = 879.0
margin_bottom = 307.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="HBox/DownloadProgress"]
margin_left = 10.0
margin_top = 5.0
margin_right = 190.0
margin_bottom = 19.0
size_flags_vertical = 1
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="Button" parent="HBox"]
visible = false
margin_left = 804.0
margin_top = 283.0
margin_right = 879.0
margin_bottom = 307.0
rect_min_size = Vector2( 75, 0 )
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Edit"

[node name="Buttons" type="TabContainer" parent="HBox"]
margin_left = 889.0
margin_top = 283.0
margin_right = 1014.0
margin_bottom = 307.0
rect_min_size = Vector2( 125, 0 )
size_flags_vertical = 4
custom_styles/panel = SubResource( 14 )
tabs_visible = false

[node name="Install" type="Button" parent="HBox/Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
text = "Install"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uninstall" type="Button" parent="HBox/Buttons"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
text = "Uninstall"

[node name="Cancel" type="Button" parent="HBox/Buttons"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
text = "Cancel"

[node name="Remove" type="Button" parent="HBox/Buttons"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
text = "Remove"

[node name="Dialogs" type="Node" parent="."]

[node name="ConfirmRemove" type="Node" parent="Dialogs"]
script = ExtResource( 5 )
content_size = Vector2( 300, 150 )
ok_text = "Remove"

[node name="Label" type="Label" parent="Dialogs/ConfirmRemove"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 220, 0 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmUninstall" type="Node" parent="Dialogs"]
script = ExtResource( 5 )
content_size = Vector2( 300, 150 )
ok_text = "Uninstall"

[node name="Label" type="Label" parent="Dialogs/ConfirmUninstall"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 220, 0 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBox/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="HBox/Buttons/Install" to="." method="_on_Install_pressed"]
[connection signal="pressed" from="HBox/Buttons/Uninstall" to="." method="_on_Uninstall_pressed"]
[connection signal="pressed" from="HBox/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="HBox/Buttons/Remove" to="." method="_on_Remove_pressed"]
[connection signal="confirmed" from="Dialogs/ConfirmRemove" to="." method="_on_ConfirmRemove_confirmed"]
[connection signal="confirmed" from="Dialogs/ConfirmUninstall" to="." method="_on_ConfirmUninstall_confirmed"]
